--- a/style.css
+++ b/style.css
@@ -783,12 +783,13 @@ footer .all-heder-content h1::after {
     align-items: center;
     padding: 20px 25px;
     justify-content: center;
+    width: 400px;
   }
   .header-content p {
     text-align: justify;
   }
   .about-img {
-    width: 60%;
+    width: 70%;
   }
   .about .header-tect {
     width: 35%;
@@ -851,7 +852,7 @@ footer .all-heder-content h1::after {
 }
 @media only screen and (max-width: 480px) {
   nav .manu-area ul li a {
-    padding: 0 5px;
+    padding: 0 1px;
   }
   .slider-section .header-text h1 {
     font-size: 39px;
@@ -874,19 +875,33 @@ footer .all-heder-content h1::after {
     gap: 2rem;
     padding: 0 40px;
   }
+
   /* ------------------ */
   .all-heder-content hr {
     width: 43%;
   }
   .contact-field-top input {
-    width: 400px;
+    width: 350px;
   }
   .contact-field-bottom textarea {
-    width: 400px;
+    width: 350px;
   }
   .supmit button {
     margin-left: 2%;
     margin-top: 3%;
+  }
+  .footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 3% 10%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-bottom-left {
+    padding: 5px 0;
+  }
+  .footer-bottom-right {
+    padding: 5px 0;
   }
 }
 @media only screen and (max-width: 320px) {
